<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.iris.android.quizapp.MainActivity">

        <TextView
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/rule"
            android:textStyle="italic" />

        <TextView
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_1_a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_1_b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_1_c_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_1_d_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_d"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2_a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_2_b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_2_c_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_2_d_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            style="@style/customText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <ImageView
            android:id="@+id/question_3_1_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/question_3_1" />

        <ImageView
            android:id="@+id/question_3_2_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/question_3_2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_3_a_button"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/question_3_a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_3_b_button"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/question_3_b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_3_c_button"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/question_3_c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/question_3_d_button"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:drawablePadding="16dp"
                android:drawableRight="@drawable/question_3_d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />


        <CheckBox
            android:id="@+id/question_4_a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question_4_a"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/question_4_b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question_4_b"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/question_4_c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question_4_c"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/question_4_d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/question_4_d"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:id="@+id/textView2"
            style="@style/customText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/question_5_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_for_question_5"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/result"
            style="@style/customText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="16dp"
            android:onClick="submitAnswer"
            android:paddingTop="10dp"
            android:text="@string/submitAnswer" />
    </LinearLayout>
</ScrollView>
